--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header>
+        <h2>Header Logo</h2>
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three</a>
+    </header>
+    <article id="Article-One">
+
+    </article>
+    <article id="Atricle-Two">
+
+    </article>
+    <article id="Atricle-Three">
+
+    </article>
+    <article id="Atricle-Four">
+
+    </article>    
+
+    <footer>
+        <p>Copyright &copy; The Odin Project 2024</p>
+    </footer>
 </body>
 </html>
